test/invalid/assign_type_mismatch.py
# Type mismatch in declared assignment
def main() -> None:
    x: int = "hello"
    print(x)
